--- a/Style/style.css
+++ b/Style/style.css
@@ -42,7 +42,7 @@ ul{
     border-radius: 10px;
     border: none;
     margin-right: 150px;
-    margin-top:30px;
+    margin-top:10px;
     
     
 }
@@ -143,7 +143,8 @@ header{
     justify-content: center;
     text-align: center;
     font-size:42px #252432;
-    font-weight:bold ;
+    font-weight:bold;
+
 }
 .imagenext{
     size: 15px;
@@ -151,8 +152,73 @@ header{
 }
 .new-class{
   display: flex ;
+  margin-top: 10px;
 }
 .main{
     justify-content: center;
     text-align: left;
+}
+ .headingp{
+    font-size:20px;
+    font-weight: bold;
+    margin-top: 10px;
+    
+ }
+ .two{
+    font-size:15px;
+    font-weight: normal;
+    margin-top: 6px;
+    text-overflow: hidden;
+
+ }
+ .three{
+    font-size:15px;
+    font-weight: normal;
+    margin-top: 6px;
+    color: #312e2e;
+ }
+.family{
+   display: flex;
+   justify-content: center;
+   margin-left: 150px;
+   padding: auto;
+   
+}
+.form-group {
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+textarea {
+    height: 100px;
+}
+
+
+button:hover {
+    background-color:#4E47FF;
+}
+
+.newform{
+    max-width: fit-content;
+}
+.anotherhead{
+    font-size:87px;
+    font-weight: bold;
+    
+}
+.hello{
+    display:flex;
 }
