--- a/Style/style.css
+++ b/Style/style.css
@@ -215,10 +215,38 @@ button:hover {
     max-width: fit-content;
 }
 .anotherhead{
-    font-size:87px;
+    font-size:80px;
     font-weight: bold;
+    margin-left: 150px;
+    padding-top: 65px;
     
 }
 .hello{
     display:flex;
+    margin-top: 100px;
+    justify-content: space-between;
+    text-align: center;
+    margin-right: 150px;
+}
+.logo{
+    text-align: center;
+    justify-content: center;
+    font-size:50px ;
+    color:#4E47FF ;
+    margin-top: 100px;
+}
+.prara{
+    text-align: center;
+    justify-content: center;
+    font-size: 20;
+    color: #6f6f70;
+    margin-top: 15px;
+}
+.named{
+display: flex;
+justify-content: center;
+text-align: center;
+margin: 30px 452px;
+gap: 40px;
+color: #6f6f70;
 }
